--- a/www/index.j2
+++ b/www/index.j2
@@ -38,10 +38,10 @@
                     <a class="collapsed" data-toggle="collapse" href="#collapse{{ loop.index }}" aria-expanded="false" aria-controls="collapse{{ loop.index }}">
                       <span style="font-size: 80%" class="glyphicon glyphicon-chevron-right"></span> {{ event.time }} - {{ event.title }}:
                     </a>
-                    <span class="task-{{ event.status }}">{% if event.status == 'ok' %}OK{% elif event.status == 'progress' %}IN PROGRESS{% elif event.status == 'ok' %}OK{% else %}ERROR{% endif %}</span>
+                    <span class="task-{{ event.status }}">{% if event.status == 'ok' %}OK{% elif event.status == 'progress' %}IN PROGRESS{% elif event.status == 'failed' %}FAIL{% else %}ERROR{% endif %}</span>
                   </h4>
                 </div>
-                <div id="collapse{{ loop.index }}" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="heading{{ loop.index }}">
+                <div id="collapse{{ loop.index }}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{ loop.index }}">
                   <div class="panel-body">
                     {% if event.status == 'progress' %}
                       <img src="/img/load_big.gif"/>
@@ -59,6 +59,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
+    <script src="/js/refresh.js"></script>
     <script src="/js/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
   </body>
