--- a/www/index.j2
+++ b/www/index.j2
@@ -36,7 +36,7 @@
                 <div class="panel-heading" role="tab" id="heading{{ loop.index }}">
                   <h4 class="panel-title">
                     <a class="collapsed" data-toggle="collapse" href="#collapse{{ loop.index }}" aria-expanded="false" aria-controls="collapse{{ loop.index }}">
-                      <span style="font-size: 80%" class="glyphicon glyphicon-chevron-right"></span> {{ event.time }} - {{ event.title }}:
+                      <span style="font-size: 80%" class="glyphicon glyphicon-chevron-right"></span> <span class="event-time">{{ event.time }} -</span> {{ event.title }}:
                     </a>
                     <span class="task-{{ event.status }}">{% if event.status == 'ok' %}OK{% elif event.status == 'progress' %}IN PROGRESS{% elif event.status == 'failed' %}FAIL{% else %}ERROR{% endif %}</span>
                   </h4>
