--- a/www/index.j2
+++ b/www/index.j2
@@ -30,9 +30,10 @@
     <div class="container main-container">
       <div class="row">
         <div class="col-md-12">
-          <h5>STATUS: {% status %} {%if status.startswith('Waiting') %}<img style="margin-left: 5px;" src="/img/load_big.gif"/>{% endif %}</h5>
+          <h5>STATUS: {{ status }} {%if status.startswith('Waiting') %}<img style="margin-left: 5px;" src="/img/load_big.gif"/>{% endif %}</h5>
         </div>
       </div>
+      {% if requests|length != 0 %}
       <div class="row">
         <div class="col-md-12">
           <div class="panel panel-default">
@@ -42,7 +43,7 @@
                 <table class="table table-condensed vmsh">
                   <col width="32px"/>
                   <col width="150px"/>
-                  <col width="auto"/>
+                  <col width="100%"/>
                   <tbody>
                     {% for req in requests %}
                     <tr class="request" data-stack="{{ loop.index }}">
@@ -58,6 +59,7 @@
           </div>
         </div>
       </div>
+      {% endif %}
       {% for req in requests %}
       <div class="row events" id="events-stack-{{ loop.index }}">
         <div class="col-md-12">
@@ -68,17 +70,16 @@
                 <table class="table table-condensed vmsh">
                   <col width="32px"/>
                   <col width="150px"/>
-                  <col width="auto"/>
+                  <col width="100%"/>
                   <tbody>
                     {% for evt in req.events %}
                     <tr class="event-header">
                       <td><span style="font-size: 80%" class="glyphicon glyphicon-chevron-right"></span></td>
                       <td><span class="event-time">{{ evt.time }}</span></td>
-                      <td>{{ evt.title }} - <span class="task-{{ event.status }}">{% if evt.status == 'ok' %}OK{% elif evt.status == 'progress' %}IN PROGRESS{% elif evt.status == 'failed' %}FAIL{% elif evt.status == 'skipped' %}SKIPPED{% else %}ERROR{% endif %}</span></td>
+                      <td>{{ evt.title }} - <span class="task-{{ evt.status }}">{% if evt.status == 'ok' %}OK{% elif evt.status == 'progress' %}IN PROGRESS{% elif evt.status == 'failed' %}FAIL{% elif evt.status == 'skipped' %}SKIPPED{% else %}ERROR{% endif %}</span></td>
                     </tr>
                     <tr class="collapse">
                       <td></td>
-                      <td>
                       {% if evt.status == 'progress' %}
                         <td colspan="2"><img src="/img/load_big.gif"/></td>
                       {% else %}
